package com.michalkubiak.template;

public class RecordActivities {

    // In a real application, this method would have parameters for capturing
    // information about the user
    public void record() {
        System.out.println("Record Activities");
    }
}
